[package]
name            = "minigw"
authors         = ["Jason de Wolff <jasondewolff@gmail.com>"]
description     = "A convenient Rust library for creating cross platform windows and displaying pixel buffers."
version         = "0.0.6"
edition         = "2021"
repository      = "https://github.com/JasondeWolff/minigw"
documentation   = "https://docs.rs/minigw/"
categories      = ["rendering", "graphics", "gui", "games"]
keywords        = ["minigw", "framebuffer", "graphics", "games", "window"]
license         = "MIT"

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
imgui = "0.10.0"
cgmath    = "0.17.0"

[lib]
name = "minigw"
crate-type = ["lib"]
path = "src/lib.rs"

[profile.dev]                           # Modify profile settings via config.
opt-level = 0                           # Optimization level.
debug = true                            # Include debug info.
debug-assertions = true                 # Enables debug assertions.
overflow-checks = true                  # Enables runtime integer overflow checks.
lto = false                             # Sets link-time optimization.
panic = 'unwind'                        # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 16                      # Number of code generation units.
rpath = false                           # Sets the rpath linking option.

[profile.release]                       # Modify profile settings via config.
opt-level = 3                           # Optimization level.
debug = false                           # Include debug info.
debug-assertions = false                # Enables debug assertions.
overflow-checks = false                 # Enables runtime integer overflow checks.
lto = true                              # Sets link-time optimization.
panic = 'abort'                         # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 1                       # Number of code generation units.
rpath = false                           # Sets the rpath linking option.